// Vitest Snapshot v1

exports[`CdrAccordion > component snapshot when unwrapped > renders correctly 1`] = `
<div
  class=""
  id="test-accordion"
>
  <h2
    class="cdr-accordion__header--unwrapped"
  >
    <!--
        Triggered on accordion open/close
        @event accordion-toggle
      -->
    <div
      class="js-cdr-accordion-button"
      id="test"
    >
      <span
        class="cdr-accordion__label"
        id="test-label"
      >
        <!-- @slot  Sets the readable text on the CdrAccordion button -->
        
        label
        
      </span>
      <!--v-if-->
    </div>
  </h2>
  <div
    class="cdr-accordion__content-container cdr-accordion--open cdr-accordion--unwrap"
    style="max-height: none;"
  >
    <div
      class="cdr-accordion__content cdr-accordion--open cdr-accordion--unwrap"
      id="test-collapsible"
    >
      <!-- @slot CdrAccordion content -->
      
      This is some slot text.
      
    </div>
  </div>
</div>
`;

exports[`CdrAccordion > component snapshot when wrapped > renders correctly 1`] = `
<div
  class="cdr-accordion"
  id="test-accordion"
>
  <h2
    class="cdr-accordion__header"
  >
    <!--
        Triggered on accordion open/close
        @event accordion-toggle
      -->
    <button
      aria-controls="test-collapsible"
      aria-expanded="false"
      class="cdr-accordion__button js-cdr-accordion-button"
      id="test"
    >
      <span
        class="cdr-accordion__label"
        id="test-label"
      >
        <!-- @slot  Sets the readable text on the CdrAccordion button -->
        
        label
        
      </span>
      <svg
        aria-hidden="true"
        class="cdr-icon cdr-accordion__icon cdr-accordion--closed"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        
        
        <path
          d="M12 16c.273 0 .521-.11.702-.288l5.005-5.005a1 1 0 00-1.414-1.414L12 13.586 7.705 9.29a1 1 0 00-1.412 1.417l4.98 4.98c.182.193.44.313.727.313z"
          role="presentation"
        />
        
        <!--v-if-->
      </svg>
    </button>
  </h2>
  <div
    class="cdr-accordion__content-container cdr-accordion--closed"
    style="max-height: 0px;"
  >
    <div
      aria-hidden="true"
      class="cdr-accordion__content cdr-accordion--closed"
      id="test-collapsible"
    >
      <!-- @slot CdrAccordion content -->
      
      This is some slot text.
      
    </div>
  </div>
</div>
`;
